doc: Add icons to package manager tabs

--- a/paseri-docs/src/content/docs/guides/getting-started.mdx
+++ b/paseri-docs/src/content/docs/guides/getting-started.mdx
@@ -2,32 +2,32 @@
 title: "Getting Started"
 ---
 
-import {Tabs, TabItem} from '@astrojs/starlight/components';
+import { Tabs, TabItem } from '@astrojs/starlight/components';
 
 ## Installation
 
 <Tabs syncKey="packageManager">
-    <TabItem label="Deno">
+    <TabItem label="Deno" icon="deno">
         ```shell
         deno add jsr:@vbudovski/paseri
         ```
     </TabItem>
-    <TabItem label="Bun">
+    <TabItem label="Bun" icon="bun">
         ```shell
         bunx jsr add @vbudovski/paseri
         ```
     </TabItem>
-    <TabItem label="pnpm">
+    <TabItem label="pnpm" icon="pnpm">
         ```shell
         pnpm dlx jsr add @vbudovski/paseri
         ```
     </TabItem>
-    <TabItem label="yarn">
+    <TabItem label="yarn" icon="seti:yarn">
         ```shell
         yarn dlx jsr add @vbudovski/paseri
         ```
     </TabItem>
-    <TabItem label="npm">
+    <TabItem label="npm" icon="seti:npm">
         ```shell
         npx jsr add @vbudovski/paseri
         ```
