--- a/paseri-docs/src/content/docs/reference/Schema/Collections/array.mdx
+++ b/paseri-docs/src/content/docs/reference/Schema/Collections/array.mdx
@@ -4,6 +4,10 @@ sidebar:
     order: 21
 ---
 
+import { Playground } from "../../../../../components/Playground.tsx";
+
+## Example
+
 ```typescript
 import * as p from '@vbudovski/paseri';
 
@@ -15,6 +19,14 @@ if (result.ok) {
     // result.value typed as `number[]`.
 }
 ```
+
+## Playground
+
+<Playground
+    schemaDefaultValue={"```typescript\np.array(p.number())\n```"}
+    dataDefaultValue={"```typescript\n[1, 2, 3]\n```"}
+    client:idle
+/>
 
 ## Validators
 
