--- a/paseri-docs/src/content/docs/reference/Schema/Others/lazy.mdx
+++ b/paseri-docs/src/content/docs/reference/Schema/Others/lazy.mdx
@@ -7,6 +7,8 @@ sidebar:
 It's possible to define a recursive schema using lazy evaluation. Unfortunately, due to a limitation of TypeScript, its
 type cannot be automatically inferred.
 
+## Example
+
 ```typescript
 import * as p from '@vbudovski/paseri';
 
