--- a/paseri-docs/src/content/docs/reference/Schema/Collections/object.mdx
+++ b/paseri-docs/src/content/docs/reference/Schema/Collections/object.mdx
@@ -7,6 +7,10 @@ sidebar:
 By default, the `object` schema will raise errors if it comes across unrecognised keys during parsing. This behaviour
 can be changed with `strip` and `passthrough`.
 
+import { Playground } from "../../../../../components/Playground.tsx";
+
+## Example
+
 ```typescript
 import * as p from '@vbudovski/paseri';
 
@@ -25,6 +29,15 @@ if (!result.ok) {
     // result.issue flags `other` as unrecognised.
 }
 ```
+
+## Playground
+
+<Playground
+    schemaDefaultValue={"```typescript\np.object({\n    foo: p.string(),\n    bar: p.number()\n})\n```"}
+    dataDefaultValue={"```typescript\n{\n  foo: 'baz',\n  bar: 123,\n}\n```"}
+    client:idle
+/>
+
 
 ## Validators
 
