--- a/paseri-docs/src/content/docs/reference/Schema/Others/union.mdx
+++ b/paseri-docs/src/content/docs/reference/Schema/Others/union.mdx
@@ -4,6 +4,10 @@ sidebar:
     order: 42
 ---
 
+import { Playground } from "../../../../../components/Playground.tsx";
+
+## Example
+
 ```typescript
 import * as p from '@vbudovski/paseri';
 
@@ -15,3 +19,11 @@ if (result.ok) {
     // result.value typed as `number | string`.
 }
 ```
+
+## Playground
+
+<Playground
+    schemaDefaultValue={"```typescript\np.union(p.number(), p.string())\n```"}
+    dataDefaultValue={"```typescript\n'foo'\n```"}
+    client:idle
+/>
