--- a/paseri-docs/src/content/docs/reference/Schema/Primitives/bigint.mdx
+++ b/paseri-docs/src/content/docs/reference/Schema/Primitives/bigint.mdx
@@ -4,6 +4,10 @@ sidebar:
     order: 3
 ---
 
+import { Playground } from '../../../../../components/Playground.tsx'
+
+## Example
+
 ```typescript
 import * as p from '@vbudovski/paseri';
 
@@ -16,6 +20,14 @@ if (result.ok) {
 }
 ```
 
+## Playground
+
+<Playground
+    schemaDefaultValue={"```typescript\np.bigint()\n```"}
+    dataDefaultValue={"```typescript\n456n\n```"}
+    client:idle
+/>
+
 ## Validators
 
 ### `gte`
@@ -23,7 +35,7 @@ if (result.ok) {
 Greater than or equal to `value`.
 
 ```typescript
-p.string().gte(5);
+p.string().gte(5n);
 ```
 
 ### `gt`
@@ -31,7 +43,7 @@ p.string().gte(5);
 Greater than `value`.
 
 ```typescript
-p.string().gt(5);
+p.string().gt(5n);
 ```
 
 ### `lte`
@@ -39,7 +51,7 @@ p.string().gt(5);
 Less than or equal to `value`.
 
 ```typescript
-p.string().lte(5);
+p.string().lte(5n);
 ```
 
 ### `lt`
@@ -47,5 +59,5 @@ p.string().lte(5);
 Less than `value`.
 
 ```typescript
-p.string().lt(5);
+p.string().lt(5n);
 ```
