doc: Add JSDoc to exported symbols

--- a/paseri-docs/src/content/docs/guides/getting-started.mdx
+++ b/paseri-docs/src/content/docs/guides/getting-started.mdx
@@ -42,9 +42,9 @@ import * as p from '@vbudovski/paseri';
 
 const schema = p.object({
     hello: p.string(),
-})
+});
 
-const data = Object.freeze({ hello: 'world' });
+const data = { hello: 'world' };
 const result = schema.safeParse(data);
 if (result.ok) {
     console.log(`Hello ${result.value.hello}!`);
