feature: String includes

--- a/paseri-docs/src/content/docs/reference/Schema/Primitives/string.mdx
+++ b/paseri-docs/src/content/docs/reference/Schema/Primitives/string.mdx
@@ -85,3 +85,11 @@ A valid [Nano ID](https://github.com/ai/nanoid).
 ```typescript
 p.string().nanoid();
 ```
+
+### `includes`
+
+Contains the `searchString`.
+
+```typescript
+p.string().includes('foo');
+```
