feature: String startsWith

--- a/paseri-docs/src/content/docs/reference/Schema/Primitives/string.mdx
+++ b/paseri-docs/src/content/docs/reference/Schema/Primitives/string.mdx
@@ -93,3 +93,11 @@ Contains the `searchString`.
 ```typescript
 p.string().includes('foo');
 ```
+
+### `startsWith`
+
+Starts with the `searchString`.
+
+```typescript
+p.string().startsWith('foo');
+```
