feature: String endsWith

--- a/paseri-docs/src/content/docs/reference/Schema/Primitives/string.mdx
+++ b/paseri-docs/src/content/docs/reference/Schema/Primitives/string.mdx
@@ -101,3 +101,11 @@ Starts with the `searchString`.
 ```typescript
 p.string().startsWith('foo');
 ```
+
+### `endsWith`
+
+Ends with the `searchString`.
+
+```typescript
+p.string().endsWith('foo');
+```
