feature: String date

--- a/paseri-docs/src/content/docs/reference/Schema/Primitives/string.mdx
+++ b/paseri-docs/src/content/docs/reference/Schema/Primitives/string.mdx
@@ -109,3 +109,11 @@ Ends with the `searchString`.
 ```typescript
 p.string().endsWith('foo');
 ```
+
+### `date`
+
+A valid [ISO 8601](https://en.wikipedia.org/wiki/ISO_8601) date string `YYYY-MM-DD`.
+
+```typescript
+p.string().date();
+```
